--- a/net-core/Hiwjcn.Api/Hiwjcn.Api.csproj
+++ b/net-core/Hiwjcn.Api/Hiwjcn.Api.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="Common.Logging.Log4Net1213" Version="3.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
