--- a/net-45/Hiwjcn.Test/packages.config
+++ b/net-45/Hiwjcn.Test/packages.config
@@ -6,7 +6,7 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="5.2.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="Elasticsearch.Net" version="6.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
@@ -16,7 +16,7 @@
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
-  <package id="NEST" version="5.2.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="NEST" version="6.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NLog" version="1.0.0.505" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
