--- a/net-45/Hiwjcn.Web/packages.config
+++ b/net-45/Hiwjcn.Web/packages.config
@@ -8,7 +8,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Log4Net1211" version="3.3.1" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="2.5.5" targetFramework="net45" requireReinstallation="true" />
+  <package id="Elasticsearch.Net" version="6.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="Ical.Net" version="4.0.6" targetFramework="net462" />
@@ -25,7 +25,7 @@
   <package id="Microsoft.Web.RedisSessionStateProvider" version="2.2.5" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.10" targetFramework="net45" />
-  <package id="NEST" version="2.5.5" targetFramework="net45" requireReinstallation="true" />
+  <package id="NEST" version="6.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="NodaTime" version="2.0.2" targetFramework="net462" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
