--- a/net-45/Lib/packages.config
+++ b/net-45/Lib/packages.config
@@ -8,7 +8,7 @@
   <package id="Common.Logging" version="3.4.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.0" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
-  <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net45" requireReinstallation="true" />
+  <package id="Elasticsearch.Net" version="6.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="ImageProcessor" version="2.5.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
@@ -19,7 +19,7 @@
   <package id="MongoDB.Bson" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
-  <package id="NEST" version="2.4.6" targetFramework="net45" requireReinstallation="true" />
+  <package id="NEST" version="6.0.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
