--- a/net-45/Lib/Lib.csproj
+++ b/net-45/Lib/Lib.csproj
@@ -270,6 +270,8 @@
     <Compile Include="infrastructure\model\ScopeInfoModel.cs" />
     <Compile Include="infrastructure\service\user\UserLoginServiceBase.cs" />
     <Compile Include="mvc\auth\AuthConfigExtension.cs" />
+    <Compile Include="rpc\FancyClient.cs" />
+    <Compile Include="rpc\WebApiClient.cs" />
     <Compile Include="task\QuartzExtension.cs" />
     <Compile Include="task\TaskContainer.cs" />
     <Compile Include="task\TaskHelper.cs" />
