--- a/net-core/Hiwjcn.Api/Hiwjcn.Api.csproj
+++ b/net-core/Hiwjcn.Api/Hiwjcn.Api.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.0.2" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="6.10.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0002" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.0-preview1-26228-01" />
   </ItemGroup>
 
   <ItemGroup>
