--- a/net-45/Lib/packages.config
+++ b/net-45/Lib/packages.config
@@ -15,6 +15,14 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
@@ -31,6 +39,7 @@
   <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
