--- a/net-core/Lib/Lib.csproj
+++ b/net-core/Lib/Lib.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.8" />
     <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="DotNetCore.NPOI" Version="1.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
