--- a/net-core/Hiwjcn.Test/Hiwjcn.Test.csproj
+++ b/net-core/Hiwjcn.Test/Hiwjcn.Test.csproj
@@ -15,8 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lib.extra\Lib.extra.csproj" />
-    <ProjectReference Include="..\Lib.mvc\Lib.mvc.csproj" />
+    <ProjectReference Include="..\Lib.infrastructure\Lib.infrastructure.csproj" />
     <ProjectReference Include="..\Lib\Lib.csproj" />
   </ItemGroup>
 
