--- a/net-core/Lib.autofac/Lib.autofac.csproj
+++ b/net-core/Lib.autofac/Lib.autofac.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
